# Lehman_Cousins

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
migrations/: 20240101000000_init.sql
src/: config.rs  engine.rs  lib.rs  main.rs  telemetry.rs
src/core/: events.rs  feed_state.rs  instrument.rs  models.rs  orderbook.rs
src/exchange_clients/: book_sync.rs  bybit.rs  rest_client.rs  traits.rs  websocket_client.rs
src/order_manager/: in_flight.rs  manager.rs  mod.rs  nonce.rs  rate_limiter.rs
src/risk_manager/: checks.rs  inventory.rs  manager.rs
src/strategies/: traits.rs
src/utils/: math.rs  retry.rs  time.rs
